JSX : added features to navigation menu (overlay, close button CSS : fixed display bug (icon tools), added responsivity for large screens. ASSESTS : added new images and correct data in json files

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr_FR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -17,9 +17,12 @@
     />
     <title>Aurélien Porté | Intégrateur web</title>
     <!-- FACEBOOK CARD -->
-    <meta property="og:site_name" content="nomdusite" />
+    <meta property="og:site_name" content="Aurélien Porté - Développeur" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://adressedusite" />
+    <meta
+      property="og:url"
+      content="https://portfolio-react-seven-swart.vercel.app/"
+    />
     <meta
       property="og:title"
       content="Aurélien Porté - Développeur front-end"
@@ -41,7 +44,10 @@
       content="Découvrez mon univers et mes services"
     />
     <meta name="twitter:image" content="https://imagedusite.webp" />
-    <meta name="twitter:url" content="https://urldusite" />
+    <meta
+      name="twitter:url"
+      content="https://portfolio-react-seven-swart.vercel.app/"
+    />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
